--- a/index.html
+++ b/index.html
@@ -65,13 +65,122 @@
     </nav> 
     <br><br><br>
     <!--navbar penutup-->  
-    
-<!--footer pembuka-->
-    <footer style="background-color: black;color: white; height: 200px;">
+    <!--content pembuka-->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>WELCOME TO SMA N 1 DEPOK</h1>
+          <p>SMK Negeri 1 Depok adalah sebuah Sekolah Menengah Kejuruan (SMK) Negeri pertama di Kota Depok dan telah mendapat status sekolah PK (Pusat Keunggulan) dan status sekolah BLUD (Badan Layanan Umum Daerah)</p>
+          <br>
+          <button type="button" class="btn btn-warning">Mulai jelajahi</button>
+        </div>
+        <div class="col-md-6">
+          <img src="gbr1.jpg">
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="gbr2.jpg" height="300" width="300">
+        </div>
+        <div class="col-md-6">
+          <h1>TENTANG SMK N 1 DEPOK</h1>
+          <p>SMK Negeri 1 Depok adalah sebuah Sekolah Menengah Kejuruan (SMK) Negeri pertama di Kota Depok dan telah mendapat status sekolah PK (Pusat Keunggulan) dan status sekolah BLUD (Badan Layanan Umum Daerah).</p>
+          <p>Sekolah ini pada awalnya terdiri dari 2 program studi yaitu Program Studi Mekanik Otomotif dan Program Studi Akomodasi Perhotelan. Namun, sekarang sudah bertambah program studi menjadi 6 program yaitu Permodelan Perangkat Lunak dan Gim, Desain Komunikasi dan Visual, Akomodasi Perhotelan, Akutansi, Teknik Bisnis Sepeda Motor, Teknik Kendaraan Ringan.</p>
+        </div>
+      </div>
+    </div>
+    <!--content penutup-->
+    <br>
+    <!--carousel pembuka-->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="d-flex justify-content-center">
+            <h3>BERITA TERBARU SMK N 1 DEPOK</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="gbr3.jpg" class="d-block w-100" alt="...">
+          <div class="d-flex justify-content-center">
+            <h5>Workshop</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="gbr4.jpg" class="d-block w-100" alt="...">
+          <div class="d-flex justify-content-center">
+            <h5>Rapat Luring</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="gbr5.jpg" class="d-block w-100" alt="...">
+          <div class="d-flex justify-content-center">
+            <h5>Peringatan Hari Guru</h5>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!--carousel penutup-->
+    <br><br>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">
+          <img src="gbr 6.jpg">
+        </div>
+        <div class="col-md-6">
+          <h3>Kepala Sekolah</h3>
+          <h2>LUSI TRIANA,S.Pd.,MM</h2>
+          <p>Puji dan syukur marilah kita panjatkan kehadirat Allah SWT. atas limpahan rahmat, taufik dan hidayah-Nya, kita semua diberikan kesehatan sehingga dapat melaksanakan tugas kita di bidang pendidikan.</p>
+          <p>Para pengunjung situs yang berbahagia, kami ucapkan selamat datang di situs SMKN 1 Depok ini. Kami menyadari sepenuhnya dalam rangka memajukan pendidikan di era berkembangnya Teknologi Informasi yang begitu pesat, sangat diperlukan berbagai sarana prasarana yang kondusif</p>
+          <button type="button" class="btn btn-primary">lihat selengkapnya</button>
+        </div>
+      </div>
+    </div>
+    <!--footer pembuka-->
+    <div class="footer" style="background-color: black;color: white; height: 500px;">
+      <div class="contaier-fluid">
+        <div class="row">
+          <div class="col-md-8">
+            <h2>SMK N 1 DEPOK</h2>
+            <p>SMK Negeri 1 Depok adalah sebuah Sekolah Menengah Kejuruan (SMK) Negeri pertama di Kota Depok dan telah mendapat status sekolah PK (Pusat Keunggulan) dan status sekolah BLUD (Badan Layanan Umum Daerah</p>
+            <button type="button" class="btn btn-primary">Back to top</button>
+          </div>
+          <div class="col-md-4">
+            <h2>Contact us</h2>
+            <p>Gang Bhakti Suci No.100, Cimpaeun, Tapos, Kota Depok, Jawa Barat, 16459</p>
+            <p>smkn1depok@gmail.com</p>
+            <p>021-8790-7233</p>
+            <ul>
+              <li><i class="fa-brands fa-facebook"></i></li>
+              <li><i class="fa-brands fa-instagram"></i></li>
+              <li><i class="fa-brands fa-twitter"></i></li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <div class="d-flex justify-content-center">
-        <p>© Copyright 2022 importir.org - All Rights Reserved</p>
-      </div>      
-    </footer>
+       <p>© 2022 SMKN 1 Depok. All rights reserved.</p>
+      </div>
+    </div>   
 <!--footer penutup-->
 <script src="js/popper.min.js"></script>
 <script src="js/jquery-3.6.0.min.js"></script>
