menambahkan file style.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--navbar pembuka-->
-    <nav class="navbar  fixed-top navbar-expand-lg navbar-secondary bg-secondary">
+    <nav class="navbar  fixed-top navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">SMK N 1 DEPOK</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -156,18 +156,17 @@
       </div>
     </div>
     <!--footer pembuka-->
-    <div class="footer" style="background-color: black;color: white; height: 500px;">
+    <div class="footer" style="background-color: black;color: white; height: 400px;">
       <div class="contaier-fluid">
         <div class="row">
           <div class="col-md-8">
             <h2>SMK N 1 DEPOK</h2>
-            <p>SMK Negeri 1 Depok adalah sebuah Sekolah Menengah Kejuruan (SMK) Negeri pertama di Kota Depok dan telah mendapat status sekolah PK (Pusat Keunggulan) dan status sekolah BLUD (Badan Layanan Umum Daerah</p>
+            <p>SMK Negeri 1 Depok adalah sebuah Sekolah Menengah Kejuruan (SMK) Negeri pertama di Kota Depok dan telah mendapat status sekolah PK (Pusat Keunggulan) dan status sekolah BLUD (Badan Layanan Umum Daerah)</p>
             <button type="button" class="btn btn-primary">Back to top</button>
           </div>
           <div class="col-md-4">
             <h2>Contact us</h2>
             <p>Gang Bhakti Suci No.100, Cimpaeun, Tapos, Kota Depok, Jawa Barat, 16459</p>
-            <p>smkn1depok@gmail.com</p>
             <p>021-8790-7233</p>
             <ul>
               <li><i class="fa-brands fa-facebook"></i></li>
@@ -176,11 +175,12 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="d-flex justify-content-center">
-       <p>© 2022 SMKN 1 Depok. All rights reserved.</p>
-      </div>
-    </div>   
+      </div>     
+    </div> 
+    <footer class="blockquote-footer d-flex justify-content-center bg-primary">
+      <cite title="Source Title">© 2022 SMKN 1 Depok. All rights reserved</cite>
+  </footer> 
+
 <!--footer penutup-->
 <script src="js/popper.min.js"></script>
 <script src="js/jquery-3.6.0.min.js"></script>
