menambahkan folder img

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle"href="#" id="navbarDropdowns" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle"href="berita.html" id="navbarDropdowns" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Berita
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Berita Sekolah</a></li>
+                  <li><a class="dropdown-item" href="berita.html">Berita Sekolah</a></li>
                   <li><a class="dropdown-item" href="#">Pengumuman</a></li>                                        
                 </ul>
               </li>
