--- a/berita.html
+++ b/berita.html
@@ -97,13 +97,13 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="smk-bisa-hebat-png-.png" class="d-block w-100" alt="...">
+                        <img src="img/smk-bisa-hebat-png-.png" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="me.jpg" class="d-block w-100" alt="...">
+                        <img src="img/me.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="lo.jpg" class="d-block w-100" alt="...">
+                        <img src="img/lo.jpg" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -122,13 +122,13 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="2 copy.jpg" class="d-block w-100" alt="...">
+                            <img src="img/2 copy.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="smk-bisa-hebat-png-.png" class="d-block w-100" alt="...">
+                            <img src="img/smk-bisa-hebat-png-.png" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="smk-bisa-hebat-png-.png" class="d-block w-100" alt="...">
+                            <img src="img/smk-bisa-hebat-png-.png" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -157,7 +157,7 @@
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img src="ya.jpeg" class="card-img-top" alt="...">
+                    <img src="img/ya.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Kepala Sekolah Inspiratif</h5>
                       <p class="card-text"> Kepala Sekolah Inspiratif Nasional Teguh Juliawan yang menyediakan solusi pencegahan salah pilih jurusan kuliah</p>
@@ -167,7 +167,7 @@
             </div>
             <div class="col-3">
                 <div class="card">
-                    <img src="OIP.jpg" class="card-img-top" alt="...">
+                    <img src="img/OIP.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">helem anti begal</h5>
                       <p class="card-text">BERITA Siswa SMK menciptakan helm Anti begal.</p>
@@ -200,7 +200,7 @@
            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis voluptatem molestiae et eveniet a repudiandae? Porro quo laboriosam vero?</p>
           </div>
           <div class="col-4">
-            <img src="Gambar-Siswa-SMK-Telkom.jpg" class="img-fluid" alt="...">
+            <img src="img/Gambar-Siswa-SMK-Telkom.jpg" class="img-fluid" alt="...">
           </div>
         </div>
       </div> 
@@ -211,7 +211,7 @@
            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis voluptatem molestiae et eveniet a repudiandae? Porro quo laboriosam vero?</p>
           </div>
           <div class="col-4">
-            <img src="p.jpg" class="img-fluid" alt="...">
+            <img src="img/p.jpg" class="img-fluid" alt="...">
           </div>
         </div>
       </div> 
